@@ -3,6 +3,15 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2007-09-03	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-81-68-chpsim-09-04:
+	  Tiny clean-up:
+	  Object/module.{h,cc}: historic __cflat_aliases_no_import
+		removed b/c identical to its counterpart after refactoring.
+	  Preparing to reuse complete-type-to-module code...
+
+
 2007-09-02	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-81-68-chpsim-09-03:
